syntax = "proto3";

package echo;

message StreamEchoRequest {
  string message = 1;
  int32 repeat = 2;
}

message StreamEchoResponse {
  string message = 1;

}

service EchoService {
  rpc StreamEcho (StreamEchoRequest) returns (stream StreamEchoResponse) {}
}
